[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
categories = ["api-bindings", "filesystem"]
description = "High-level interface for the libmtp C library."
edition = "2018"
keywords = ["mtp", "libmtp", "android", "players"]
license = "MIT"
name = "libmtp-rs"
repository = "https://github.com/quebin31/libmtp-rs"
version = "0.2.0-alpha1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
cfg-if = "0.1.10"
chrono = "0.4.18"
libc = "0.2.77"
libmtp-sys = {version = "1.1.17-4", path = "./libmtp-sys"}
num-derive = "0.3.2"
num-traits = "0.2.12"
thiserror = "1.0.20"
