[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
categories = ["api-bindings", "filesystem"]
description = "High-level interface for the libmtp C library."
edition = "2018"
keywords = ["mtp", "libmtp", "android", "players"]
license = "MIT"
name = "libmtp-rs"
readme = "README.md"
repository = "https://github.com/quebin31/libmtp-rs"
version = "0.4.1-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
cfg-if = "1.0.0"
chrono = "0.4.19"
derivative = "2.1.1"
libc = "0.2.79"
libmtp-sys = {version = "1.1.17-5", path = "./libmtp-sys"}
num-derive = "0.3.2"
num-traits = "0.2.12"
thiserror = "1.0.21"

[dev-dependencies]
anyhow = "1.0.33"
bytefmt = "0.1.7"
